# buzz

./: .gitignore  .gitleaks.toml  .swiftformat  .swiftlint.yml  BACKLOG.md  Brewfile  CHANGELOG.md  FEATURES.md  Makefile  README.md  RELEASE_NOTES_1.0.0.md  SECURITY.md  SESSION_STATE.md  SHIP_READINESS.md  justfile  project.config.json  project.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-release.yml
Buzz/: AppServices.swift  Buzz.entitlements  BuzzApp.swift  Info.plist  PrivacyInfo.xcprivacy  RootView.swift  Secrets.plist.example  UniversalLinkHandler.swift
Buzz/Resources/: mockCampuses.json  mockEvents.json  mockOrganizations.json  mockProfile.json
BuzzAppClip/: AppClipApp.swift  BuzzAppClip.entitlements  Info.plist
BuzzTests/: AppServicesResetTests.swift  AuthSessionTests.swift  EventTests.swift  EventTimeDefaultsTests.swift  EventUrgencyTests.swift  LiveNowFilterTests.swift  MapViewModelTests.swift  MembershipRoleTests.swift  ModelEncodingTests.swift  ReviewPromptControllerTests.swift  UniversalLinkRouterTests.swift
_trash/: README.md
android/: .gitignore  README.md  settings.gradle.kts
design/: tokens.json
fastlane/: Appfile  Fastfile  Matchfile
scripts/: build-mac.sh  build-win.sh  sync-tokens.mjs  sync-version.mjs
supabase/: schema.sql
web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
win/: .gitignore  README.md
win/src-tauri/: Cargo.toml  tauri.conf.json
win/src-tauri/src/: main.rs
(+357 files in other folders)
