[package]
name = "buzz"
version = "1.0.0"
description = "Buzz desktop — live college events"
authors = ["Arnav Goel"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "buzz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic    = "abort"
codegen-units = 1
lto      = true
opt-level = "s"   # optimize for size; matters for download size on bandwidth-light campuses
strip    = true
